security: Address API key exposure and improve UX structure
🚨 Security Fixes:
- Added comprehensive SECURITY_NOTICE.md documenting exposed API key issue
- Enhanced .gitignore to prevent any future secret exposure
- Added patterns for .env.*, *.key, *.pem, secrets files
- Documented immediate action required to revoke exposed Google API key

🎯 UX Improvements:
- Made Results the main landing page (/) instead of Dashboard
- Moved Dashboard to /config as Configuration Dashboard
- Reorganized navigation: Results -> Run Evaluation -> Configuration
- Enhanced Results page with statistics cards and results table
- Updated page titles and navigation structure

📊 Results Page Enhancement:
- Added evaluation statistics overview
- Created results table with status indicators
- Mock data structure ready for Phase 4 API integration
- Responsive design for results display

The exposed API key (AIzaSyCZ5uXMQaNDF0giT-6Xp-wIE2cr2Xj5nuA) was in git
history from old_codebase directory and needs immediate revocation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Environment and secrets
+.env
+.env.*
+!.env.example
+*.key
+*.pem
+secrets.txt
+secrets.json
+api_keys.txt
+
 # Frontend dependencies and build artifacts
 /frontend/node_modules/
 /frontend/dist/
